=head1 Changes in DBD-Oracle 1.29_1 (svn rev NNNNN)

  Added ora_db_shutdown and ora_db_startup private functions by Steffen Goeldner
  Fixed up the POD based on DBD::Pg by John Scoles 
  Revoved oparse_lng as it is obsolete by John Scoles
  Added installation notes for MAC Snow Leopard by Martin J. Evans
  pod review rephrasing, fixing typos and spelling mistakes up to "Placeholder Binding Attributes" by Martin J. Evans
  Add /etc to the search paths for tnsnames.ora (rt67942) by Martin J. Evans, Jay Senseman
  Removed support for ProcC connections John Scoles
  Added support for TAF callback by John Scoles
  Fixed some compiler warnings in dbdimp.c and oci8.c by Martin J. Evans
  Added Test::Simple 0.90 to build_requires as we use note etc by Martin J. Evans
  Added missing OCIServerRelease to oci.def
  Fixed bug in bind_col which was broken in 1.27 and stopped anyone using a string as a column number (e.g., '1') by Martin J. Evans, Alexander Foken

=head1 Changes in DBD-Oracle 1.28 (svn rev 14765)

  Changed 26exe_array.t so it is compatiable with older version of Test::More by John Scoles
  A fix from Charles Jardine for 58object.t to stop an error on some 64 bit systems
  A few quick changes from H. Merijn Brand to fix some compiler warings and a fix for Oracle 9 clients
  Added connection attribute 'ora_connect_with_default_signals' that will localize Perl's $SIG{INT} handler from Brian Phillips and T. Bunce
  Fix in execute_array to stop possible endless loop when using a fetch sub by Martin J. Evans
  Adapted Martin J. Evans' ODBC 70execute_array.t into t/26exe_array.t by John Scoles
  Fix for execute_array to bring it up to spec. by Martin J. Evans and John Scoles
  Marked ProC, Oraperl.pm, ora_explain.pl, ora_context, ora_use_proc_connection and ora_parse_lang as deprecated  to be removed in 1.29
  Added in 4 new server side debug/trace attributes, ora_driver_name, ora_client_info, ora_session_user and ora_action on the connection handle from John Scoles