@@ -1,8 +1,10 @@
 =head1 Changes in DBD-Oracle 1.29_1 (svn rev NNNNN)
+****************************  NOTE: ora_db_shutdown/ora_dv_startup/StrictlyType/DiscardString not documented
 
+  Added patch supplied on rt68958 to trap OCIServerAttach errors by Martin J. Evans
   Added ora_db_shutdown and ora_db_startup private functions by Steffen Goeldner
   Fixed up the POD based on DBD::Pg by John Scoles 
-  Revoved oparse_lng as it is obsolete by John Scoles
+  Removed oparse_lang as it is obsolete by John Scoles
   Added installation notes for MAC Snow Leopard by Martin J. Evans
   pod review rephrasing, fixing typos and spelling mistakes up to "Placeholder Binding Attributes" by Martin J. Evans
   Add /etc to the search paths for tnsnames.ora (rt67942) by Martin J. Evans, Jay Senseman
